financial calculator dropdownl overlap fix
Former-commit-id: 344711b1c6385ff7d103cf30962a8ff3eeebdc6c [formerly f570f3a8cba8e24796966f89ce472d244fae70e8]
Former-commit-id: 580365d8fba51e6d1efb4a318dd0878be61683af

--- a/src/styles/GeneralComponents/dropdown.module.scss
+++ b/src/styles/GeneralComponents/dropdown.module.scss
@@ -192,7 +192,7 @@
     font-weight: 500;
     border: 1px solid #898989;
     border-radius: 8px;
-    z-index: 505;
+    z-index: 499;
     background-color: white;
     position: relative;
     margin-top: 20px;
